[workspace]
members = [
    "aoc",
    "challenges/2021/day1",
    "challenges/2021/day2",
    "challenges/2021/day3",
    "challenges/2022/day1",
    "challenges/2022/day2",
    "challenges/2022/day3",
    "challenges/2022/day4",
    "challenges/2022/day5",
    "challenges/2022/day6",
    "tools/aoc-prep",
]
default-members = [
    "challenges/2022/day6"
]

[workspace.dependencies]
aoc = { path="aoc" }