[package]
name = "aoc-prep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
handlebars = { version = "4.3.5", features = ["dir_source"] }
toml_edit = "0.15.0"
